--- a/pom.xml
+++ b/pom.xml
@@ -1,1 +1,37 @@
-X
+<project>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.iamvoragun</groupId>
+    <artifactId>java-ioc</artifactId>
+    <version>1.2.1</version>
+    
+    <repositories>
+        <repository>
+            <id>saping</id>
+            <url>https://repo.spring.io/milestone/</url>
+        </repository>
+    </repositories>
+    
+    <properties>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+    </properties>
+    
+    <build>
+        <sourceDirectory>code</sourceDirectory>
+        <testSourceDirectory>test</testSourceDirectory>
+    </build>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.0.0-M6</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.0.0-M6</version>
+        </dependency>
+    </dependencies>
+</project>
